fixing spacing

--- a/solarsystem.css
+++ b/solarsystem.css
@@ -181,6 +181,10 @@
   font-style: normal;
 }
 
+player-name {
+    color: white;
+}
+
 main {
     flex: 1;
     display: flex;
@@ -205,7 +209,7 @@ body {
     flex-direction: column;
 }
 
-p {
+div {
     color:white;
     float: right;
     margin-top: 1%;
@@ -221,4 +225,6 @@ main {
     display: flex;
     flex-direction: row;
 }
+
+
 
